--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -75,9 +75,9 @@
         flex-direction: column;
     }
 
-    .aboutImage {
+    /* .aboutImage {
         display: none;
-    }
+    } */
 
     .aboutItems {
         margin-top: 29px;
