--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -2,14 +2,14 @@
 
 
 
-.skillcontainer {
+.container {
     color: var(--color-text);
     margin-top: 79px;
     margin-right: 10%;
     margin-left: 10%;
 }
 
-.skilltitle {
+.title {
     color: var(--color-text);
     font-size: 35px;
     font-weight: 700;
@@ -17,7 +17,7 @@
     text-transform: uppercase;
 }
 
-.skillcontent {
+.content {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -40,7 +40,7 @@
     gap: 13px;
 }
 
-.skillImageContainer {
+.imageContainer {
     background-color: var(--color-secondary);
     border-radius: 100%;
     display: flex;
@@ -51,7 +51,7 @@
     height: 135px;
 }
 
-.skillImageContainer img {
+.imageContainer img {
     /*  */
     width: 90px;
 }
@@ -64,7 +64,7 @@
 
 
 @media screen and (max-width: 830px) {
-    .skillcontent {
+    .content {
         flex-direction: column;
         align-items: center;
         gap: 34px;
@@ -73,14 +73,14 @@
     }
 
     /*  */
-    .skillImageContainer {
+    .imageContainer {
         margin-top: 20px;
         width: 100px;
         height: 100px;
     }
 
     /*  */
-    .skillImageContainer img {
+    .imageContainer img {
         width: 50px;
     }
 
