--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -126,3 +126,21 @@
         font-weight: 700;
     }
 }
+
+
+/* new addition */
+
+@media screen and (max-width: 403px) {
+    .container {
+        flex-direction: column-reverse;
+    }
+
+    .content {
+        align-items: center;
+    }
+
+    .title {
+        font-size: 40px;
+        font-weight: 700;
+    }
+}
